# glycosphingotool

./: .gitignore  README.md  export_ttl.py  pyproject.toml
analyses/: README.md
analyses/chebi_lipidmaps_match/: Mapping to SphinGOMAP.xlsx  analyse_chebi_match.py  compound_analysis.tsv  compounds_with_chebis.tsv  df_lipidmaps_43.tsv  lmid2smid.tsv  sphingomapkey_compounds_in_chebi.tsv
analyses/reactions_analysis/: Manual rhea reactions by Series.tsv  check_overlap_manual_and_generated.py  visualise_network_graph.py
bash/: generate_commands.sh  generate_commands_all_sphingoids_one_nacyl.sh  run_all.sh  run_all_sphingoids.sh
src/glycosphingotool/: cli.py  compounds.py  nomenclature.py  reactions.py  utils.py
src/glycosphingotool/assets/: SphingomapkeyV1.4.xls
src/glycosphingotool/data/: residue_to_sugar_nucleotide.tsv
